# MultiAgent_RAG

./: .env.example  .gitignore  Makefile  README.md  STATUS.md  docker-compose.dev.yml  docker-compose.yml  improvement_plan.md
backend/: .dockerignore  Dockerfile  alembic.ini  conftest.py  pyproject.toml
backend/app/: celery_app.py  config.py  dependencies.py  exceptions.py  main.py  tasks.py
backend/app/api/v1/: admin.py  chat.py  documents.py  health.py
backend/app/core/: rate_limiter.py
backend/app/core/generation/: guard.py  intent_classifier.py  llm_router.py  mode_switch.py  prompt_builder.py  streamer.py
backend/app/core/ingestion/: chunker.py  cleaner.py  embedder.py  enricher.py  extractor.py  indexer.py  pipeline.py
backend/app/core/memory/: __init__.py  feedback.py  memory_tiers.py  ollama_scheduler.py  session_manager.py
backend/app/core/retrieval/: __init__.py  bm25_search.py  hybrid_search.py  pipeline.py  query_transformer.py  (+2 more)
backend/app/db/: postgres.py  qdrant.py  redis.py
backend/migrations/: env.py
backend/migrations/versions/: 001_init.py
backend/tests/integration/: test_chat_e2e.py  test_chat_modes.py  test_ingestion_async.py  test_retrieval_pipeline.py
backend/tests/unit/: test_admin_api.py  test_admin_metrics.py  test_bm25_search.py  test_celery_tasks.py  test_chunker.py  test_cleaner.py  test_cold_tier.py  test_enricher.py  test_guard.py  test_hybrid_search.py  test_intent_classifier.py  test_memory_tiers.py  test_mode_switch.py  test_query_transformer.py  test_rate_limiter.py  test_reranker.py  test_session_patch.py
(+82 files in other folders)
